Tests/QuadView/css/reset.css
/*
 * reset.css - Set default styles
 *   as presented in
 *   Bulletproof Web Design
 *   by Dan Cederholm
 */
 
 :root {
  --light: #fefefa;
  --dark: #382200;
  --menu: #eee;
  --atten: #ecdcb6;
  --hover: #666;
  --hr: #382200;
  --border: #382200;
  --lpanelw: 12rem;
  --topmenuh: 1.75rem;
  --bottommenuh: 1.75rem;
}

* {
  box-sizing: border-box;
  margin: 0px;
  padding: 0px;
}

body {
  height: 100vh;
  width: 100vw;
  line-height: normal;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size:20px;
  padding: 1rem;
  background-color: var(--light);
  color: var(--dark);
}

h1 {
  font-size:200%;
}
h2 {
  font-size:150%;
}
h3 {
  font-size:117%;
}
h4 {
  font-size:100%;
}
h5 {
  font-size:83%;
}
h6 {
  font-size:67%;
}

h1, h2, h3, h4 {
  margin-top: 0.75rem;
  margin-bottom: 0.75rem;
}

ol, ul {
  margin-top: 0.75rem;
  margin-bottom: 0.75rem;
  margin-left: 1.5rem;
}

li {
  margin-top: 0.75rem;
  margin-bottom: 0.75rem;
}

ul.tight, ol.tight {
  margin-top:0.25rem;
  margin-bottom:0.25rem;
  margin-left: 1.5rem;
}

ul.tight li, ol.tight li {
  margin-top:0.15rem;
  margin-bottom:0.15rem;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

table th, table td {
  border: 1px solid var(--dark);
  padding:0.25rem 0.5rem;
}

table th {
  background-color: var(--dark);
  color: var(--light);
}

table td {
  background-color: var(--light);
  color: var(--dark);
}

